@@ -133,7 +133,7 @@ public class IdToSpectrumFileMappingDialog extends javax.swing.JDialog {
                     return getValueAt(i, columnIndex).getClass();
                 }
             }
-            return (new Double(0.0)).getClass();
+            return (Double.valueOf(0.0)).getClass();
         }
 
         @Override
