@@ -4640,7 +4640,7 @@ public class ModificationsPanel extends javax.swing.JPanel {
                     return getValueAt(i, columnIndex).getClass();
                 }
             }
-            return (new Double(0.0)).getClass();
+            return (Double.valueOf(0.0)).getClass();
         }
 
         @Override
@@ -4746,7 +4746,7 @@ public class ModificationsPanel extends javax.swing.JPanel {
                     return getValueAt(i, columnIndex).getClass();
                 }
             }
-            return (new Double(0.0)).getClass();
+            return (Double.valueOf(0.0)).getClass();
         }
 
         @Override
@@ -4883,7 +4883,7 @@ public class ModificationsPanel extends javax.swing.JPanel {
                     return getValueAt(i, columnIndex).getClass();
                 }
             }
-            return (new Double(0.0)).getClass();
+            return (Double.valueOf(0.0)).getClass();
         }
 
         @Override
